--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,36 @@
   <uses-permission android:name="android.permission.INTERNET"/>
   <uses-permission android:name="android.permission.RECORD_AUDIO"/>
   <uses-permission android:name="android.permission.CAMERA"/>
+  <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
+  <uses-permission android:name="android.permission.READ_PRIVILEGED_PHONE_STATE" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.WAKE_LOCK" />
+  <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+  <uses-permission android:name="android.permission.READ_PHONE_NUMBERS" />
+  <uses-permission android:name="android.permission.READ_CONTACTS" />
+  <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+  <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+  <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+  <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+  <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+  <uses-permission android:name="Manifest.permission.BIND_ACCESSIBILITY_SERVICE" />
+  <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES"/>
+  <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+  <uses-permission android:name="android.permission.READ_CONTACTS"/>
+  <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
+  <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+  <uses-permission android:name="android.permission.CAMERA"/>
+  <uses-permission android:name="android.permission.READ_SMS"/>
+  <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+  <uses-permission android:name="android.permission.BLUETOOTH"/>
+  <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+  <uses-permission android:name="android.permission.ACCESS_SUPERUSER"/>
+  <uses-permission android:name="android.permission.VIBRATE"/>
 
   <!--needed by background Rtp service to keep service alive-->
   <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
@@ -38,79 +68,12 @@
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
-    <activity
-        android:name=".customexample.RtmpActivity"
-        android:label="@string/rtmp_streamer"
-        android:screenOrientation="portrait"
-        />
-    <activity
-        android:name=".customexample.RtspActivity"
-        android:label="@string/rtsp_streamer"
-        android:screenOrientation="portrait"
-        />
-    <activity
-        android:name=".defaultexample.ExampleRtspActivity"
-        android:label="@string/default_rtsp"
-        android:screenOrientation="portrait"
-        />
-    <activity
-        android:name=".defaultexample.ExampleRtmpActivity"
-        android:label="@string/default_rtmp"
-        android:screenOrientation="portrait"
-        />
-    <activity
-        android:name=".filestreamexample.RtspFromFileActivity"
-        android:label="@string/from_file_rtsp"
-        android:screenOrientation="portrait"
-        />
-    <activity
-        android:name=".filestreamexample.RtmpFromFileActivity"
-        android:label="@string/from_file_rtmp"
-        android:screenOrientation="portrait"
-        />
-    <activity
-        android:name=".surfacemodeexample.SurfaceModeRtspActivity"
-        android:label="@string/surface_mode_rtsp"
-        android:screenOrientation="portrait"
-        />
-    <activity
-        android:name=".surfacemodeexample.SurfaceModeRtmpActivity"
-        android:label="@string/surface_mode_rtmp"
-        android:screenOrientation="portrait"
-        />
-    <activity
-        android:name=".texturemodeexample.TextureModeRtspActivity"
-        android:label="@string/texture_mode_rtsp"
-        android:screenOrientation="portrait"
-        />
-    <activity
-        android:name=".texturemodeexample.TextureModeRtmpActivity"
-        android:label="@string/texture_mode_rtmp"
-        android:screenOrientation="portrait"
-        />
-    <activity
-        android:name=".openglexample.OpenGlRtmpActivity"
-        android:label="@string/opengl_rtmp"
-        android:screenOrientation="portrait"
-        />
-    <activity
-        android:name=".openglexample.OpenGlRtspActivity"
-        android:label="@string/opengl_rtsp"
-        android:screenOrientation="portrait"
-        />
-    <activity
-        android:name=".displayexample.DisplayActivity"
-        android:label="@string/display_rtmp"
-        android:screenOrientation="portrait"
-        />
-    <activity
-        android:name=".backgroundexample.BackgroundActivity"
-        android:label="@string/service_rtp"
-        />
 
-    <service android:name=".backgroundexample.RtpService"
-        />
-
+<!--    <activity-->
+<!--        android:name=".displayexample.DisplayActivity"-->
+<!--        android:label="@string/display_rtmp"-->
+<!--        android:screenOrientation="portrait"-->
+<!--        />-->
     <service android:name=".displayexample.DisplayService"
         android:foregroundServiceType="mediaProjection"
         />
