--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,16 @@ android {
 
 dependencies {
   implementation project(':rtplibrary')
+  implementation fileTree(dir: 'libs', include: ['*.jar'])
+  implementation 'com.android.support:appcompat-v7:30.0.0'
+  implementation 'com.android.support.constraint:constraint-layout:1.1.3'
   implementation 'com.google.firebase:firebase-crashlytics:17.2.2'
   implementation 'com.google.firebase:firebase-analytics:18.0.0'
   implementation 'com.google.android.material:material:1.2.1'
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+  implementation 'com.android.support:cardview-v7:30.0.0'
+  implementation 'com.android.support:recyclerview-v7:30.0.0'
+  implementation 'com.android.support:support-v4:30.0.0'
+  implementation 'com.android.support:design:30.0.0'
+  implementation 'com.github.bumptech.glide:glide:3.7.0'
 }
